--- a/craftlabs-frontend/tsconfig.json
+++ b/craftlabs-frontend/tsconfig.json
@@ -8,8 +8,9 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
+    "moduleResolution": "bundler", // <-- แก้ไข/เพิ่ม บรรทัดนี้
+    "allowImportingTsExtensions": true, // <-- เพิ่มบรรทัดนี้ (ถ้ายังไม่มี)
+    "resolveJsonModule": true, // <-- เพิ่มบรรทัดนี้ (ถ้ายังไม่มี)
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
